ci build compilation error fix
Error:  /home/runner/work/3a1fb4202f203a43474838e83f2e414bdd535ead13f8b2d416611d0c4de0a7d1/3a1fb4202f203a43474838e83f2e414bdd535ead13f8b2d416611d0c4de0a7d1/src/test/java/com/acme/workorderapi/domain/WorkOrderRepositoryTest.java:[124,104] cannot find symbol
Error:    symbol:   method toList()
Error:    location: interface java.util.stream.Stream<java.lang.Long>